--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,8 +16,8 @@
     --secondary-foreground: 0 0% 9%;
     --muted: 0 0% 96.1%;
     --muted-foreground: 0 0% 45.1%;
-    --accent: 0 0% 96.1%;
-    --accent-foreground: 0 0% 9%;
+    --accent: 221 83% 53%;
+    --accent-foreground: 221 72% 89%;
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
     --border: 0 0% 89.8%;
@@ -65,5 +65,9 @@
   }
   .container {
     @apply mx-auto max-w-7xl px-4 xl:px-0;
+  }
+
+  .skeleton {
+    @apply animate-pulse bg-gray-300;
   }
 }
