--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -70,4 +70,8 @@
   .skeleton {
     @apply animate-pulse bg-gray-300;
   }
+
+  .input-style {
+    @apply flex h-10 w-full rounded-md border bg-background px-3 py-2 text-base outline-none placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 md:text-sm;
+  }
 }
