--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,4 +74,8 @@
   .input-style {
     @apply flex h-10 w-full rounded-md border bg-background px-3 py-2 text-base outline-none placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 md:text-sm;
   }
+
+  .width-layout {
+    @apply mx-auto w-full max-w-7xl px-4 xl:px-0;
+  }
 }
